syntax = "proto3";

option java_package = "test.xyz.srclab.common.protobuf.protogen";
//option java_outer_classname = "ProtoMessage";
option java_multiple_files = true;
//option java_generic_services = true;

message RequestMessage {
    string id = 1;
    MessageData data = 2;
}

message ResponseMessage {
    string code = 1;
    string state = 2;
    MessageData data = 3;
}

message MessageData {
    enum Type {
        TYPE_0 = 0;
        TYPE_1 = 1;
    }
    Type type = 1;
    string message = 2;
    repeated string number = 3;
    map<string, string> entry = 4;
}